--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.1",
+    "react-alert": "^4.0.4",
+    "react-alert-template-basic": "^1.0.0",
+    "react-dom": "^16.8.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.3",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
