--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.8.1",
+    "react-number-format": "^4.0.6",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.5.3",
