--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "*"
 "psycopg2" = "*"
 model-mommy = "*"
 django-rest-knox = "*"
+django-heroku = "*"
 
 [dev-packages]
 pylint = "*"
