--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ djangorestframework = "*"
 model-mommy = "*"
 django-rest-knox = "*"
 django-heroku = "*"
+gunicorn = "*"
 
 [dev-packages]
 pylint = "*"
